# refstack

./: .bowerrc  .dockerignore  .eslintignore  .eslintrc  .gitignore  .gitreview  .testr.conf  .zuul.yaml  NOTES.md  Procfile  README.md  README.rst  alembic.ini  bindep.txt  bower.json  config.json  config.json.sample  fabfile.py  package.json  refstack.cfg  refstack.wsgi  requirements.txt  run-in-docker  schema.sql  setup-mysql-tests.sh  setup.cfg  setup.py  test-requirements.txt  tox.ini  uwsgi.ini
alembic/: env.py
alembic/versions/: 121ee191d348_added_alt_user.py  16345354480e_added_config_to_test.py  1d6540fc6279_added_vendor_contact.py  23f82f78731b_fixing_unique.py  2bad1445cf30_added_email_verfied_.py  2bf99fa45ded_remove_unique_restra.py  2d1f3e3cd357_added_architecture_t.py  2e26571834ea_first_step.py  3790aed42558_from_scratch.py  40d4c6d389ec_adding_cloud_and_use.py  42278d6179b9_init.py  4288db006e5_added_user_cloud_rel.py  449461dbc725_add_apikey.py  4a425a7aff50_major_restructure.py  4f6f77184d45_really_added_user_cl.py  501f41fac63a_additions_to_schema.py  53fcc008b313_auto_generating.py  59e15d864941_added_subunit_output.py  5a5148d89f90_added_su_field_to_us.py
defcore/: 2015.03.json  README.rst  capabilities.html  havanacore.json  havanasections.json  icehousecore.json  junocore.json
defcore/drafts/: havanacore.json
defcore/havana/: capabilities.json  coretests.json  drivers.json
defcore/js/: helpers.js
doc/: README.md  execute_test.md  refstack.md  requirements.txt  run_in_docker.md  run_tempest_manually.md  tcup.md  uploading-private-results.md
doc/source/: conf.py  index.rst  refstack.rst  run_in_docker.rst  test_result_management.rst  uploading_private_results.rst  vendor_product.rst
docker/: Dockerfile
docker/nginx/: refstack-site.conf  refstack_dev.crt  refstack_dev.key
docker/scripts/: api-db-version  api-init-db  api-sync  api-up  start.sh
docker/templates/: config.json.tmpl  refstack.conf.tmpl
etc/: refstack.conf.sample
refstack/: __init__.py  admin.py  api.py  app.py  backend.py  config.py  decorators.py  default_settings.py  extensions.py  gearman.py  localmodels.py  models.py  opts.py  refstack_config.py  runserver.py  schema.sql  utils.py  web.py
refstack-ui/: .bowerrc  .eslintignore  .gitignore  README.rst  bower.json  package.json
refstack-ui/app/: app.js  config.json.sample  index.html
refstack-ui/tests/: karma.conf.js
refstack/api/: __init__.py  app.py  app.wsgi  config.py  constants.py  exceptions.py  guidelines.py  utils.py  validators.py
refstack/cli/: refstack  refstack_old
refstack/client/: requirements.txt  test-requirements.txt  tox.ini
refstack/common/: __init__.py  cloud.py  tempest_config.py  test.py  tester.py  user.py  validators.py  vendor.py
refstack/db/: __init__.py  api.py  migration.py  utils.py
refstack/static/: capabilities.html  comparison.html  other_test_result.json  output.html  refstack.css  report_page.css  (+2 more)
refstack/tools/tester/: README.rst  havana_requirements.txt  setup.cfg  setup.py  setup_ubuntu_env.sh  tester
scripts/: import_vendors.py  tcup.py
specs/: README.rst  template.rst
t-container/: Dockerfile
tools/: convert-docs.py  cover.sh  install-js-tools.sh  update-rs-db.py  update-rs-db.rst
(+186 files in other folders)
