[metadata]
name = execute_test
version = 0.1
summary = Tempest test wrapper for refstack
description-file =
    README.rst
author = OpenStack
author-email = fits@lists.openstack.org
home-page = http://www.openstack.org/
classifier =
    Environment :: OpenStack
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.3

[files]
packages =
    refstack

[global]
setup-hooks =
    pbr.hooks.setup_hook

